2012-06-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make the `smooth' benchmark compatible with the `spp' targets.

	* benchmarks/smooth/smooth.c: Do not nest `sl_create' if the
	current dialect is `spp'.

2012-06-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fixes.

	* benchmarks/blas/gendata.sh,
	* benchmarks/livermore/ll-generate.py: Avoid generating data files
	in subdirectories.

	* benchmarks/blas/bench-dasum.inputs,
	* benchmarks/blas/bench-daxpy.inputs,
	* benchmarks/blas/bench-dcopy.inputs,
	* benchmarks/blas/bench-ddot.inputs,
	* benchmarks/blas/bench-dnrm2.inputs,
	* benchmarks/blas/bench-drot.inputs,
	* benchmarks/blas/bench-dscal.inputs,
	* benchmarks/blas/bench-dswap.inputs,
	* benchmarks/blas/bench-idamax.inputs,
	* benchmarks/blas/bench-isamax.inputs,
	* benchmarks/blas/bench-sasum.inputs,
	* benchmarks/blas/bench-saxpy.inputs,
	* benchmarks/blas/bench-scopy.inputs,
	* benchmarks/blas/bench-sdot.inputs,
	* benchmarks/blas/bench-snrm2.inputs,
	* benchmarks/blas/bench-srot.inputs,
	* benchmarks/blas/bench-sscal.inputs,
	* benchmarks/blas/bench-sswap.inputs: Update accordingly.

2012-06-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Simplify the benchmarking makefiles.

	* build-aux/benchmarks.mk: At the cost of requiring GNU Make,
	avoid two passes and flatten all the benchmark rules into one
	dependency graph.

2012-05-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the benchmark Makefile generation.

	* build-aux/benchmarks.mk (BENCH_BINFORMATS): Use `ptl_n', not
	`ptl' since the latter has been deprecated in the more recent
	versions of slc.

2012-05-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the `mandel' benchmark/demo.

	* benchmarks/mandel/mandel.c: Provide code to use a round-robin
	distribution of points to cores instead of the naive N/P
	distribution. Use this code by default on MT targets, or if
	-DOTHER_DIST is used during preprocessing.

2012-05-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>
